--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <title>GeoTracker</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="http://maps.googleapis.com/maps/api/js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key="+environment.mapKey+"&callback=initMap"></script>
 </head>
 <body>
   <app-root></app-root>
