--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALPuwXBzfRVhg0RKRpiOGOLBbi595zPik&sensor=true"></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALPuwXBzfRVhg0RKRpiOGOLBbi595zPik&sensor=true"></script> -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjxD6_LmRbCiqlJWArWi7x2CcmxCAfMzI&sensor=true"></script>
 </head>
 <body>
   <app-root></app-root>
